...
          ),
          ListTile(
            title: const Text('Ressources'),
            onTap: () => _navigate(const AllResourcesView()),
          ),
          ListTile(
            title: const Text('Se connecter'),
            onTap: () => _navigate(const LoginPage()),
          ),
          ListTile(
            title: const Text("S'inscrire"),
            onTap: () => _navigate(const RegisterPage()),
          ),
...
